g1 options